log/build_2024-04-15_10-41-01/uav_tf2_test/stderr.log
/home/ccl/ros2_ws/uav_tf2_test/src/camera_node.cpp: In lambda function:
/home/ccl/ros2_ws/uav_tf2_test/src/camera_node.cpp:32:42: error: no matching function for call to ‘rclcpp::Publisher<std_msgs::msg::String_<std::allocator<void> > >::publish(geometry_msgs::msg::Pose_<std::allocator<void> >&)’
   32 |         this->publisher_->publish(message);
      |                                          ^
In file included from /opt/ros/galactic/include/rclcpp/topic_statistics/subscription_topic_statistics.hpp:31,
                 from /opt/ros/galactic/include/rclcpp/subscription.hpp:50,
                 from /opt/ros/galactic/include/rclcpp/any_executable.hpp:25,
                 from /opt/ros/galactic/include/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/galactic/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/galactic/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/galactic/include/rclcpp/executor.hpp:36,
                 from /opt/ros/galactic/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/galactic/include/rclcpp/executors.hpp:21,
                 from /opt/ros/galactic/include/rclcpp/rclcpp.hpp:156,
                 from /home/ccl/ros2_ws/uav_tf2_test/src/camera_node.cpp:5:
/opt/ros/galactic/include/rclcpp/publisher.hpp:187:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(std::unique_ptr<MessageT, typename std::conditional<std::is_same<typename std::allocator_traits<typename std::allocator_traits<_Alloc>::rebind_traits<MessageT>::allocator_type>::rebind_alloc<MessageT>, typename std::allocator<void>::rebind<_Tp1>::other>::value, std::default_delete<_Tp>, rclcpp::allocator::AllocatorDeleter<typename std::allocator_traits<_Alloc>::rebind_traits<MessageT>::allocator_type> >::type>) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>; typename std::conditional<std::is_same<typename std::allocator_traits<typename std::allocator_traits<_Alloc>::rebind_traits<MessageT>::allocator_type>::rebind_alloc<MessageT>, typename std::allocator<void>::rebind<_Tp1>::other>::value, std::default_delete<_Tp>, rclcpp::allocator::AllocatorDeleter<typename std::allocator_traits<_Alloc>::rebind_traits<MessageT>::allocator_type> >::type = std::default_delete<std_msgs::msg::String_<std::allocator<void> > >]’
  187 |   publish(std::unique_ptr<MessageT, MessageDeleter> msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:187:53: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘std::unique_ptr<std_msgs::msg::String_<std::allocator<void> >, std::default_delete<std_msgs::msg::String_<std::allocator<void> > > >’
  187 |   publish(std::unique_ptr<MessageT, MessageDeleter> msg)
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:211:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(const MessageT&) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>]’
  211 |   publish(const MessageT & msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:211:28: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘const std_msgs::msg::String_<std::allocator<void> >&’
  211 |   publish(const MessageT & msg)
      |           ~~~~~~~~~~~~~~~~~^~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:228:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(const rcl_serialized_message_t&) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>; rcl_serialized_message_t = rcutils_uint8_array_t]’
  228 |   publish(const rcl_serialized_message_t & serialized_msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:228:44: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘const rcl_serialized_message_t&’ {aka ‘const rcutils_uint8_array_t&’}
  228 |   publish(const rcl_serialized_message_t & serialized_msg)
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:234:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(const rclcpp::SerializedMessage&) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>]’
  234 |   publish(const SerializedMessage & serialized_msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:234:37: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘const rclcpp::SerializedMessage&’
  234 |   publish(const SerializedMessage & serialized_msg)
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:248:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(rclcpp::LoanedMessage<MessageT, AllocatorT>&&) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>]’
  248 |   publish(rclcpp::LoanedMessage<MessageT, AllocatorT> && loaned_msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:248:58: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘rclcpp::LoanedMessage<std_msgs::msg::String_<std::allocator<void> >, std::allocator<void> >&&’
  248 |   publish(rclcpp::LoanedMessage<MessageT, AllocatorT> && loaned_msg)
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
make[2]: *** [CMakeFiles/camera_node.dir/build.make:63: CMakeFiles/camera_node.dir/src/camera_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/camera_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
